--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "@example/basics",
+  "name": "void-astro",
   "type": "module",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.3",
-    "@astrojs/tailwind": "^5.1.0",
-    "tailwindcss": "^3.4.1",
-    "@fontsource/inter": "^5.0.17",
-    "@fontsource/space-grotesk": "^5.0.17"
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^4.0.6",
+    "@astrojs/rss": "^4.0.11",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.4",
+    "@astropub/icons": "^0.2.0",
+    "astro": "^5.1.7",
+    "astro-iconify": "^1.2.0",
+    "astro-navbar": "^2.3.2",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
