--- a/package.json
+++ b/package.json
@@ -1,27 +1,46 @@
 {
-  "name": "void-astro",
-  "type": "module",
-  "version": "0.0.1",
+  "name": "@area44/astro-shadcn-ui-template",
+  "version": "23.12.26",
+  "description": "An Astro template for building apps.",
+  "author": {
+    "name": "AREA44"
+  },
+  "license": "MIT",
   "scripts": {
-    "dev": "astro dev --host",
-    "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro build",
+    "dev": "astro dev",
+    "format": "prettier -w . --cache",
     "preview": "astro preview",
-    "astro": "astro"
+    "start": "astro dev"
   },
   "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.0.6",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.4",
-    "@astropub/icons": "^0.2.0",
-    "astro": "^5.2.3",
-    "astro-iconify": "^1.2.0",
-    "astro-navbar": "^2.3.2",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
-  }
+    "@astrojs/react": "^3.1.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@contentful/rich-text-html-renderer": "^16.3.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "astro": "^4.5.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "contentful": "^10.8.6",
+    "lucide-react": "^0.363.0",
+    "moment-timezone": "^0.5.45",
+    "motion": "^10.17.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.33.3",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
+    "prettier-plugin-tailwindcss": "^0.5.12",
+    "typescript": "^5.4.3"
+  },
+  "packageManager": "pnpm@8.15.5"
 }
